; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_dist.c_nn_dist_rm.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/utils/extr_dist.c_nn_dist_rm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_dist = type { i32, i32 }
%struct.nn_dist_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_dist_rm(%struct.nn_dist* %0, %struct.nn_dist_data* %1) #0 {
  %3 = alloca %struct.nn_dist*, align 8
  %4 = alloca %struct.nn_dist_data*, align 8
  store %struct.nn_dist* %0, %struct.nn_dist** %3, align 8
  store %struct.nn_dist_data* %1, %struct.nn_dist_data** %4, align 8
  %5 = load %struct.nn_dist_data*, %struct.nn_dist_data** %4, align 8
  %6 = getelementptr inbounds %struct.nn_dist_data, %struct.nn_dist_data* %5, i32 0, i32 0
  %7 = call i64 @nn_list_item_isinlist(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load %struct.nn_dist*, %struct.nn_dist** %3, align 8
  %11 = getelementptr inbounds %struct.nn_dist, %struct.nn_dist* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %11, align 4
  %14 = load %struct.nn_dist*, %struct.nn_dist** %3, align 8
  %15 = getelementptr inbounds %struct.nn_dist, %struct.nn_dist* %14, i32 0, i32 0
  %16 = load %struct.nn_dist_data*, %struct.nn_dist_data** %4, align 8
  %17 = getelementptr inbounds %struct.nn_dist_data, %struct.nn_dist_data* %16, i32 0, i32 0
  %18 = call i32 @nn_list_erase(i32* %15, i32* %17)
  br label %19

19:                                               ; preds = %9, %2
  %20 = load %struct.nn_dist_data*, %struct.nn_dist_data** %4, align 8
  %21 = getelementptr inbounds %struct.nn_dist_data, %struct.nn_dist_data* %20, i32 0, i32 0
  %22 = call i32 @nn_list_item_term(i32* %21)
  ret void
}

declare dso_local i64 @nn_list_item_isinlist(i32*) #1

declare dso_local i32 @nn_list_erase(i32*, i32*) #1

declare dso_local i32 @nn_list_item_term(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
